fix pages being cut off

--- a/etc/options.css
+++ b/etc/options.css
@@ -279,7 +279,7 @@ header {
 	top: 0;
 	left: 0;
 
-	z-index: 1000;
+	z-index: 4;
 }
 header > h1 {
 	margin-top: 12px;
@@ -304,7 +304,7 @@ header > h1 > span {
 	cursor: pointer;
 	width: 300px;
 	height: 100%;
-	z-index: 998;
+	z-index: 3;
 
 	padding-top: 70px;
 }
@@ -339,9 +339,9 @@ header > h1 > span {
 	opacity: 0;
 	position: fixed;
 	top: 0;
-	left: 310px;
+	left: 0;
 	padding-top: 80px;
-	padding-left: 3px;
+	padding-left: 313px;
 	overflow-x: hidden;
 	overflow-y: auto;
 	width: 100%;
@@ -350,7 +350,7 @@ header > h1 > span {
 }
 .page.current {
 	opacity: 1;
-	z-index: 999;
+	z-index: 2;
 }
 
 #page-container {
